--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-build-backend = "uv_build"
-requires = ["uv_build>=0.9.18,<0.10.0"]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core>=3.11,<4"] # flit_core 3.11 supports project.license-files.
 
 [dependency-groups]
 dev = [
@@ -16,6 +16,7 @@ dependencies = [
     "cyclopts==4.4.4",
     "trcks==0.4.1",
 ]
+description = "Example CLI application that uses the trcks library for type-safe railway-oriented programming in Python 🚂🐍"
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
 name = "trcks-example-cyclopts"
